--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tencent/aotu-fetch",
+  "name": "pigfarm-fetcher",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
