--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pigfarm-fetcher",
-  "version": "1.1.1-beta",
+  "version": "1.1.0",
   "description": "以伪协议的形式配置你的请求",
   "main": "index.js",
   "scripts": {
