fix: 1.2.1 urltemplate 使用lodash

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pigfarm-fetcher",
-  "version": "1.1.4",
+  "version": "1.2.1",
   "description": "以伪协议的形式配置你的请求",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/nyc ./node_modules/.bin/ava test/**/*.test.js"
+    "test": "./node_modules/.bin/ava test/**/*.test.js"
   },
   "repository": {
     "type": "git",
