--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pigfarm-fetcher",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "以伪协议的形式配置你的请求",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,7 @@
   "dependencies": {
     "debug": "^2.2.0",
     "extend": "^3.0.0",
+    "lodash.get": "^4.4.2",
     "process.hrtime": "^1.0.1"
   },
   "devDependencies": {
